src/test/rustdoc-ui/intra-link-prim-conflict.stderr
error: `char` is both a module and a builtin type
  --> $DIR/intra-link-prim-conflict.rs:4:6
   |
LL | /// [char]
   |      ^^^^ ambiguous link
   |
note: the lint level is defined here
  --> $DIR/intra-link-prim-conflict.rs:1:9
   |
LL | #![deny(broken_intra_doc_links)]
   |         ^^^^^^^^^^^^^^^^^^^^^^
help: to link to the module, prefix with the item kind
   |
LL | /// [mod@char]
   |      ^^^^^^^^
help: to link to the builtin type, prefix with the item kind
   |
LL | /// [prim@char]
   |      ^^^^^^^^^

error: `char` is both a module and a builtin type
  --> $DIR/intra-link-prim-conflict.rs:10:6
   |
LL | /// [type@char]
   |      ^^^^^^^^^ ambiguous link
   |
help: to link to the module, prefix with the item kind
   |
LL | /// [mod@char]
   |      ^^^^^^^^
help: to link to the builtin type, prefix with the item kind
   |
LL | /// [prim@char]
   |      ^^^^^^^^^

error: incompatible link kind for `char`
  --> $DIR/intra-link-prim-conflict.rs:19:6
   |
LL | /// [struct@char]
   |      ^^^^^^^^^^^
   |
   = note: this link resolved to a module, which is not a struct
help: to link to the module, prefix with the item kind
   |
LL | /// [mod@char]
   |      ^^^^^^^^

error: incompatible link kind for `char`
  --> $DIR/intra-link-prim-conflict.rs:26:10
   |
LL |     //! [struct@char]
   |          ^^^^^^^^^^^
   |
   = note: this link resolved to a builtin type, which is not a struct
help: to link to the builtin type, prefix with the item kind
   |
LL |     //! [prim@char]
   |          ^^^^^^^^^

error: aborting due to 4 previous errors

